@@ -317,6 +317,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP490  (EXPERIMENTAL)
        Canon PIXMA MP530  (EXPERIMENTAL)
        Canon PIXMA MP900  (EXPERIMENTAL)
+       Canon PIXMA MX370  (EXPERIMENTAL)
+       Canon PIXMA MX430  (EXPERIMENTAL)
        Canon PIXMA MG2100 (EXPERIMENTAL)
        Canon PIXMA MG3100 (EXPERIMENTAL)
        Canon PIXMA MG4100 (EXPERIMENTAL)
